--- a/creoles05/abohdegraff.tex
+++ b/creoles05/abohdegraff.tex
@@ -22,6 +22,16 @@
 \begin{document}
   \maketitle
   \onehalfspacing
-    \citeauthor{roberts_null_2017}
+    \citeauthor{roberts_null_2017}'s (\citeyear{roberts_null_2017})
+
+    % Start by giving a history of the term creole
+      % appeared first in the 16th century for New World flora, fauna, and humans
+      % compare the appearance of creoles to the development of romance languages after rome fell
+      % cover how early scholars promoted creole exceptionalism and the racialization of creoles
+        % two ideas
+          % creoles are linked to Creoles who are in a middle position in racial hierarchy
+          % creoles are simpler than other languages (so that simple minds can use them)
+        % incompatible with UG
+        % they also argue against the idea that there's no geneological link between HC and French by comparing the preverbal markers to paraphrastic French constructions
     \printbibliography
 \end{document}
