--- a/creoles05/abohdegraff.tex
+++ b/creoles05/abohdegraff.tex
@@ -22,16 +22,32 @@
 \begin{document}
   \maketitle
   \onehalfspacing
-    \citeauthor{roberts_null_2017}'s (\citeyear{roberts_null_2017})
+    \citeauthor{roberts_null_2017}'s (\citeyear{roberts_null_2017}) article entitled \titl{A Null Theory of Creole Formation Based on Universal Grammar} provides both a thorough critique of past and current views of creoles as well as their own suggestion for how creoles form, which they call the L2A-L1A cascade hypothesis.
+    They begin by showing how, historically, anything labeled creole was considered to be less valuable than anything labeled European but more valuable than anything black.
+    The idea is to show how the idea of creole exceptionalism came about, which they follow up on with how it still pervades current scholarship on creoles.
+    They finish by offering their alternative, which is really a more general language change hypothesis.
 
-    % Start by giving a history of the term creole
-      % appeared first in the 16th century for New World flora, fauna, and humans
-      % compare the appearance of creoles to the development of romance languages after rome fell
-      % cover how early scholars promoted creole exceptionalism and the racialization of creoles
-        % two ideas
-          % creoles are linked to Creoles who are in a middle position in racial hierarchy
-          % creoles are simpler than other languages (so that simple minds can use them)
-        % incompatible with UG
-        % they also argue against the idea that there's no geneological link between HC and French by comparing the preverbal markers to paraphrastic French constructions
+    Originally, in the 16th century, the term \lexi{creole} was a label used to describe any flora, fauna, or human that grows, so to speak, in the New World.
+    For people, this became a racial classification that placed those who received the label on a hierarchy just above black slaves but certainly below Europeans.
+    As Creole people began to develop their own language, it was naturally given the Creole label, as well, which valued it similarly to how the people themselves were valued.
+    This strict hierarchy and unique development of a culture that did not fit neatly into the Europeans' us-versus-the-barbarians hierarchy made Creoles and Creole languages exceptional and colored much of early scholarship.
+
+    This view of creole exceptionalism has continued into the modern era among linguists.
+    \textcite{roberts_null_2017} take up two related issues in particular: the idea that there was a break in transmission between creoles and the idea that creoles are simpler than other languages.
+    In terms of a break in transmission, they claim that the situation for creoles is not notably different than for any other language.
+    Meillet, for example, showed that French is typologically distinct from Latin, yet it is still considered to be geneologically related to Latin, yet the same is not said of creoles, nor are geneological relationships for creoles analyzed on the same linguistic levels as they would be between Latin and related Romance languages.
+    For the latter, phonology and vocabulary take precedence in showing a relationship, yet even though there is a clear connection there between creoles and their lexifiers, morphosyntactic features are instead chosen and hence no relationship is found.
+    This gives weight to the idea of creoles as exceptional in the minds of researchers.
+
+    What also gives weight to this idea is the apparent simplicity of creoles.
+    However, \textcite{roberts_null_2017} show that attempts to measure the complexity of languages have been plagued by bias and poor methods.
+    They take up Parvall's (2008) idea of bit complexity at length, which involves counting up a small number of arbitrarily chosen overtly expressed features that are based on a poorly chosen sample of languages.
+    Though they do not speak in these terms, Parvall's analysis has the appearance of a sort of linguistic racial profiling where one concludes far too much from very shallow information.
+
+    To \textcite{roberts_null_2017}, these concepts are born out of the faulty logic that has led scholars to consider creoles exceptional.
+    They thus offer a different approach to analyzing creole formation that treats it just like any other form of language change, which they call the L2A-L1A cascade hypothesis.
+    The idea is simple: L2 speakers and L1 speakers of a proto-creole provide the PLD for succeeding generations as certain features become reinforced or done away with.
+    They apply this idea to various features of Haitian Creole, showing that learners were taking Gbe features and French features and using them with slight modifications in their own speech.
+    Their approach is ultimately meant to fit neatly into theories of Universal Grammar and language acquisition without need to resort to creating a typological distinction for creole languages.
     \printbibliography
 \end{document}
