Straightened out corpora, wrote script to extract tokens into CSVs

--- a/race_ethnicity04/lc_verbs.tex
+++ b/race_ethnicity04/lc_verbs.tex
@@ -88,8 +88,34 @@
       It is also possible that verb types play a role, as stative and non-stative verbs have indiosyncracies in other aspects of the grammar \parencite[pp.~252-253]{klingler_if_2003}.
       As such, tokens will also be coded for whether they are stative or non-stative.
 
+      % To add
+        % Working assumption is that short forms are preferred for present habitual, so including potential past perfectives or potential adjectives that are long form would go against this assumption and make a result that fits the assumption more concrete
+          % Include only tokens that are clearly present habitual, judged by Klingler's translation and context (e.g., temporal adverbs, aktionsart, whether a story is being told or not)
+        % Verbs without preverbal markers are often ambiguously perfective or habitual
+          % Excluded unless the meaning is clearly present habitual
+          % also means excluding historical present
+          % Verbs like mouri were excluded because in singular cases because it's not possible for one person to habitually die
+        % Sometimes difficult to distinguish stative verbs and adjectives (e.g. marye)
+          % Klingler's glossary doesn't clarify either
+          % Excluded example: ME: ... ye tou marye e blon
+            % coordinated adjectives makes it clear that marye is an adj
+          % only included where context allows one to be sure of status as verbs, which means most if not all are excluded
+        % Causatives excluded b/c of current disagreement on whether the verbs are infinitives or not
+          % example: ME ... se sa-ki fe nou parl pa kreyòl
+          % similarly, subordinate clauses are excluded as this leads to the potential for using other modes (assuming they might exist) such as subjunctive or infinitive: e.g., excluded "touche" in YC: Ye p ole to touche y paseu (se si se sa) traka.
+          % Also similarly, excluded "si" clauses, as it's not very clear what TMA is being expressed
+            % eg: YC: Si m ole fe--- mon pa konnen ki se sa fe mal!
+            % Klingler talks about this (and the general distribution of long vs short) on p463
+        % Kapab treated as a verb following Klingler's analysis (and because it's safer)
+        % Translation tasks excluded
+        % Excluded uncertain passages marked with parentheses: MP ... ye toujou (pele mon) pou ede
+        % Exclude copula because of different forms that are possible in different positions
+          % ye, e, et, hard to tell if any are short or long
+
     \subsection{Statistical analysis}
       For the quantitative analysis, binomial logistic regression will be used with the verb form as the response variable, uninflected or inflected being the two possible values.
       Each of the factors that the tokens were coded for will be considered in the analysis.
+
+      % Long form travaye only occurred 3 times in corpus and only in secondary group (p249)
     \printbibliography
 \end{document}
