Converted from proposal to full project

--- a/creoles03/lc_dets.tex
+++ b/creoles03/lc_dets.tex
@@ -71,5 +71,9 @@
     To that end, each tokens will be coded for race, gender, and age.
     They will also be coded for linguistic factors, that is to say features of the nouns, such as whether they are animate or inanimate.
     The linguistic factors can then have full statistical analyses applied as the category limitation is not relevant for these.
+
+    % To add
+      % 3rd person plural excluded because it would often look invariant either way when "ye"
+      % Translation tasks excluded
     \printbibliography
 \end{document}
